# System-Monitor

./: CMakeLists.txt  README.md  create_shortcut.sh  run.sh
src/backend/: core.c  cpu.c  disk.c  gpu.c  memory.c  network.c  processes.c  sysinfo.c
src/backend/include/: core.h  cpu.h  disk.h  gpu.h  memory.h  network.h  processes.h  sysinfo.h
src/frontend/: main.py
